# legaltech-consumer-protection

./: .gitignore  404.html  CNAME  Dutch_Products_Prices_Analysis.html  LICENSE  README.md  TOKEN.txt  index.html  mkdocs.yml  privacy-policy.html  pyproject.toml  sitemap.xml
Anonymity/: index.html
Dutch_Prices_CrawlerBot/: index.html
Dutch_Products_Crawler/: index.html
Facebook_Ads_API/: index.html
Facebook_Ads_CrawlerBot/: index.html
Facebook_PersonaBot/: index.html
License/: index.html
PersonaBot/: index.html
Spoofing/: index.html
Untitled/: index.html
data/: fb_ads.csv  fb_ads_regions.csv
docs/: Anonymity.md  Background.md  Dutch_Prices_CrawlerBot.ipynb  Facebook_Ads_API.ipynb  Facebook_Ads_CrawlerBot.ipynb  Facebook_PersonaBot.ipynb  License.md  Perfect_Graph_API.md  PersonaBot.ipynb  PersonaBot.md  README.md  Spoofing.md  Untitled.ipynb  config.yaml  emulators.md  fb_ad_lib_scraper.py  index.md  privacy-policy.md  software.md
docs/theme_override_home/: home.html  main.html
emulators/: index.html
fb_ad_lib_scraper/: index.html
privacy-policy/: index.html
search/: search_index.json
software/: index.html
spoofing/: index.html
