[tool.poetry]
name = "legaltech-consumer-protection"
version = "0.1.0"
description = "Website for the LegalTech Consumer Protection project"
authors = ["pedrohserrano <hdez.serrano@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.2.1"
Markdown = "^3.3.4"
pymdown-extensions = "^8.2"
fontawesome-markdown = "^0.2.6"
mkdocs-jupyter = "^0.17.3"
mkdocstrings = "^0.15.2"
mkdocs-bootstrap4 = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
